--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <script src="script.js" type="text/javascript" charset="utf-8"></script>
 <h2>Thanks HTML5, CSS3 and JavaScript !!!</h2>
 <header>
-<img src="logo/html.png" height="300" />
-<img src="logo/css.png" height="300" />
-<img src="logo/js.png" height="300" />
+<img src="html.png" height="300" />
+<img src="css.png" height="300" />
+<img src="js.png" height="300" />
 </header>
 </body>
 </html>
